# hermes-iris-kakaotalk

./: .gitignore  LICENSE  README.md
feroad-rest-api/: .env.example  Cargo.toml  README.md
feroad-rest-api/docs/superpowers/plans/: 2026-06-29-feroad-domain-mvp.md
feroad-rest-api/docs/superpowers/specs/: 2026-06-29-feroad-domain-design.md  README.md
feroad-rest-api/src/: config.rs  error.rs  lib.rs  main.rs
feroad-rest-api/src/api/v1/: mod.rs
feroad-rest-api/src/api/v1/pot/: dto.rs  handlers.rs  mod.rs
feroad-rest-api/src/api/v1/routes/: handlers.rs  mod.rs
feroad-rest-api/src/booking/application/command/: mod.rs  request_catalog_booking.rs
feroad-rest-api/src/booking/domain/model/: booking.rs
feroad-rest-api/src/booking/infrastructure/event_handlers/: ephemeral_route_activated_handler.rs  mod.rs
feroad-rest-api/src/contract/domain/model/: brokerage_contract.rs  mod.rs
feroad-rest-api/src/contract/infrastructure/event_handlers/: booking_confirmed_handler.rs  mod.rs
feroad-rest-api/src/identity/domain/model/: user.rs
feroad-rest-api/src/infrastructure/: acl.rs  app_state.rs  event_bus.rs  mod.rs
feroad-rest-api/src/organization/domain/model/: organization.rs
feroad-rest-api/src/pot/application/command/: mod.rs  (+2 more)
feroad-rest-api/src/routes/: health.rs  mod.rs
feroad-rest-api/src/shared_kernel/: domain_event.rs  event_types.rs  ids.rs  mod.rs  pot_payload.rs  value_objects.rs
feroad-rest-api/tests/: bc_boundary.rs  catalog_api.rs  catalog_flow_integration.rs  health_check.rs  pot_api.rs  pot_flow_integration.rs  shared_kernel_values.rs
(+25 files in other folders)
